pom for the new version's java